add db user write with google auth
